# task2

./: .gitignore  CMakeLists.txt  README.md  crational.cpp  crational.h  rational.h  tests.cpp
